# spectrogram-anomaly-ae

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  TODO.md  citation.cff  pyproject.toml  requirements.txt
data/01_windowed_labeled_2,5s/2inchStickout/F_08-Jun-2017_rpm1030_doc0p001/: 2inchStickout_label.csv  F_08-Jun-2017_rpm1030_doc0p001_window_0000.npz
data/01_windowed_labeled_2,5s/2inchStickout/F_08-Jun-2017_rpm320_doc0p005/: 2inchStickout_label.csv  F_08-Jun-2017_rpm320_doc0p005_window_0000.npz  F_08-Jun-2017_rpm320_doc0p005_window_0001.npz  F_08-Jun-2017_rpm320_doc0p005_window_0002.npz  (+17 more)
data/03_ma_dataset/: README.md
data/03_ma_dataset/test/: labels.csv
notebooks/: 01_Load_Data_Segmentation_Labeling.ipynb  01b_Prepare_CNC_Machining_Dataset.ipynb  02_Create_Frozen_Splits_and_Manifests.ipynb  02_Create_Spectrograms.ipynb  03_Create_Spectrogram_Datasets.ipynb  04_Train_CNN_AE_BN16_150x100px.ipynb  05_Evaluate_AE_Scores_and_Thresholds.ipynb  06_Baseline_Comparisons.ipynb  07_VER_Ablation_and_Sensitivity.ipynb  08_Bootstrap_CIs_and_Report_Tables.ipynb  09_Resolution_Contamination_Axis_Studies.ipynb  10_Error_Analysis_and_Deployment_Benchmark.ipynb  11_Method_Documentation_and_Citation_Cleanup.ipynb  12_Publication_Quality_Figures_and_Tables.ipynb
notebooks/ma_dataset/: 04_Train_CNN_AE_BN16_150x100px.ipynb  05_Evaluate_AE_Scores_and_Thresholds_Experiments.ipynb
scripts/: prepare_cnc_machining_dataset.py
src/spectrogram_anomaly_ae/: __init__.py  cnc_machining.py  cnn_autoencoder.py
tests/: test_cnc_machining.py  test_cnn_autoencoder.py
(+629 files in other folders)
