[project]
name = "spectrogram-anomaly-ae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christian Gawron", email = "gawron.christian@fh-swf.de" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.8",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
